--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.nandawperdana.kotlinmvp"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -53,7 +53,7 @@ dependencies {
     compile 'com.squareup.moshi:moshi-kotlin:1.5.0'
 
     // picasso
-    compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 repositories {
     maven { url "https://oss.sonatype.org/content/repositories/snapshots"}
